feat: spin-classifier-maven-plugin for modular tests with JPMS provides discovery (#18)